<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/img_sign_up"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_fileName="signup.json"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_loop="true" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@id/img_sign_up"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@id/edt_name"/>
    <TextView
        android:id="@+id/label_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        android:layout_margin="20dp"
        android:textSize="17sp"/>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_gender"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"/>
        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/female"/>
    </RadioGroup>

    <com.marlonmafra.android.widget.EditTextPassword
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:letterSpacing="0"
        android:lines="1"
        android:minHeight="48dp"
        android:paddingEnd="10dp"
        android:textSize="15sp"
        android:textStyle="normal"
        app:hidePasswordIcon="@drawable/ic_hide_pwd"
        app:iconPosition="right"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        app:showPasswordIcon="@drawable/ic_show_pwd"
        tools:ignore="Autofill,LabelFor,RtlSymmetry,SpeakableTextPresentCheck,TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/sign_up"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>